--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wdgLC3zOXwtv4ZbhwPc3hK84RDJvaODDnZITf52C1HI=
+APP_KEY=base64:Lp6ffMaYj8DnZXVTmNryWaYOrUN4dnOs46dcAJYbhM0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=chirondb
 DB_USERNAME=root
 DB_PASSWORD=
 
