--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Lp6ffMaYj8DnZXVTmNryWaYOrUN4dnOs46dcAJYbhM0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://chiron-electronics-store.app/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
